common/applications/omada-controller/extensions/templates/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada-controller-web
subsets:
  - addresses:
      - ip: ${OMADA_CONTROLLER_IPV4}
    ports:
      - name: http
        port: 443
        protocol: TCP
